--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.username=Tae
+spring.datasource.password=1129
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
