--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
 spring.datasource.username=Tae
 spring.datasource.password=1129
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.main.allow-circular-references=true
